<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent" >

    <RelativeLayout
        android:id="@+id/rl_bind_termination_by_input_title"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@color/title_bg_color" >

        <ImageView
            android:id="@+id/btn_bind_termination_by_input_back"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/selector_back" />

        <TextView
            android:id="@+id/tv_bind_termination_by_input_title"
            style="@style/txt_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/txt_bind_termination" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bind_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_bind_termination_by_input_title"
        android:orientation="vertical"
        android:paddingLeft="40dip"
        android:paddingRight="40dip"
        android:paddingTop="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="输入设备码："
            android:textColor="#666666"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/txt_equipment_information"
            android:textColor="#666666"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_device_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dip"
            android:textColor="#FF8F3F" />

        <LinearLayout
            android:id="@+id/ll_input_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:text="输入验证码："
                android:textColor="#666666"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="（验证码在终端中查看）"
                android:textColor="#666666"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dip"
                android:textColor="#FF8F3F" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_bind_confirm"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_marginTop="40dip"
            android:background="@drawable/selector_round_btn"
            android:text="@string/txt_confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>