<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000" >

    <RelativeLayout
        android:id="@+id/rl_login_title"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@color/title_bg_color"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/selector_bg_login"
            android:paddingBottom="1dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="1dip"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:background="@drawable/selector_bg_login"
            android:paddingBottom="1dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="1dip"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/txt_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="登录" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_user_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_login_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="手机"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_login_phone_num"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="14dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="密码"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="textPassword" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="14dip"
            android:background="#d9dadc" />

        <CheckBox
            android:id="@+id/cb_remember_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dip"
            android:layout_marginTop="10dip"
            android:text="记住密码"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/selector_round_btn"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_foget_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="@string/txt_forget_password_question_mark"
            android:textColor="#FE9850"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_login_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="手        机"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_register_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="14dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="验  证  码"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_register_verification_code"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="3"
                android:background="@null"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_register_fetch_verification_code"
                android:layout_width="0dip"
                android:layout_height="36dip"
                android:layout_marginLeft="5dip"
                android:layout_weight="2"
                android:background="@drawable/selector_fetch_btn"
                android:text="@string/txt_fetch_verification_code"
                android:textColor="#3c4143"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="10dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dip"
            android:paddingTop="14dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="密        码"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_register_input_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="12" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dip"
            android:paddingTop="14dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="确认密码"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_register_reinput_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="12" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:background="#d9dadc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="密码为8-12位字母及数字组合"
            android:textColor="#929292"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/selector_round_btn"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_reset_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_login_title"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="手        机"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_reset_pwd_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="14dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="验  证  码"
                android:textColor="#000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_reset_pwd_verification_code"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="3"
                android:background="@null"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_reset_pwd_fetch_verification_code"
                android:layout_width="0dip"
                android:layout_height="36dip"
                android:layout_marginLeft="5dip"
                android:layout_weight="2"
                android:background="@drawable/selector_fetch_btn"
                android:text="@string/txt_fetch_verification_code"
                android:textColor="#3c4143"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="10dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dip"
            android:paddingTop="14dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="密        码"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_reset_pwd_input_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="12" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:background="#d9dadc" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dip"
            android:paddingTop="14dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="确认密码"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_reset_pwd_reinput_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:inputType="textPassword"
                android:maxLength="12" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:background="#d9dadc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="密码为8-12位字母及数字组合"
            android:textColor="#929292"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_reset_pwd"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/selector_round_btn"
            android:text="@string/txt_reset_password"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>